--- a/Exercícios/ex002/index.html
+++ b/Exercícios/ex002/index.html
@@ -10,16 +10,16 @@
 </head>
 <body>
     <div id="conteudoSite">
+        <header>
+            <h1>Verificador de Idade</h1>
+        </header>
         <section>
-            <header>
-                <h1>Verificador de Idade</h1>
-            </header>
             <div id="conteudo">
-                <form>
-                    <p>Ano de nascimento: 
-                        <input type="number" name="ano" id="ano" min="1" placeholder="ex: 2000"> 
+                <div>
+                    <p>Ano de nascimento:
+                        <input type="number" name="ano" id="ano" min="1" placeholder="ex: 2000">
                     </p>
-                    <p>Sexo: 
+                    <p>Sexo:
                         <input type="radio" name="sexo" id="sMasculino" checked>
                         <label for="sMasculino">Masculino</label>
                         <input type="radio" name="sexo" id="sFeminino">
@@ -28,9 +28,9 @@
                     <p>
                         <input type="submit" value="Verificar" onclick="carregar()">
                     </p>
-                    <p>Preecha os dados acima para ver os resultados!</p>
-                </form>
-                <div id="divImg">
+                </div>
+                <div id="divInfo">
+                    Preencha os campos a cima
                 </div>
             </div>
         </section>
