--- a/EX6/index.html
+++ b/EX6/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="conteudoSite">
         <header>
-            <h1>TITULO</h1>
+            <h1>Tabuada</h1>
         </header>
         <section>
             <!-- AREA BRANCA DO SITE -->
@@ -31,7 +31,7 @@
             </div>
         </section>
         <footer>
-            <p>Footer</p>
+            <p>@miguellvilela</p>
         </footer>
     </div>
 </body>
