--- a/EX7/index.html
+++ b/EX7/index.html
@@ -20,8 +20,8 @@
                     <p>
                         <label for="num">Número (entre 1 e 100):</label>
                         <input type="number" name="num" id="num">
-                        <!--Botão de verificar-->
-                        <input type="submit" value="Adicionar" onclick="carregar()" class="botao">
+                        <!--Botão de Adicionar-->
+                        <input type="submit" value="Adicionar" onclick="adicionar()" class="botao">
                     </p>
                 </div>
                 
