--- a/projeto-to-do-2/index.html
+++ b/projeto-to-do-2/index.html
@@ -13,12 +13,13 @@
         <div id="tasks-header">
             <h2>Salve a sua próxima tarefa: </h2>
             <form action="" id="add-task-form">
-                <input type="text" id="task-title" placeholder="O que você vai fazer?">
+                <input type="text" id="input-task-title" placeholder="O que você vai fazer?">
                 <div id="add-btn" onclick="addTask()">
                     <ion-icon name="add-outline" id="icon-add-outline"></ion-icon>
                 </div>
             </form>
         </div>
+
         <div id="tasks-list-container">
             <h2>Estas são as suas tarefas:</h2>
             <ul id="task-list">
