--- a/projeto-to-do-2/index.html
+++ b/projeto-to-do-2/index.html
@@ -12,7 +12,7 @@
     <div id="tasks-container">
         <div id="tasks-header">
             <h2>Salve a sua próxima tarefa: </h2>
-            <form action="" id="add-task-form">
+            <form action="javascript:addTask()" id="add-task-form">
                 <input type="text" id="input-task-title" placeholder="O que você vai fazer?">
                 <div id="add-btn" onclick="addTask()">
                     <ion-icon name="add-outline" id="icon-add-outline"></ion-icon>
