--- a/Projeto-calculadora/index.html
+++ b/Projeto-calculadora/index.html
@@ -12,8 +12,8 @@
     <div id="calc"> <!--conteudo site-->
         <h3>Calculadora</h3> <!--h1-->
         <div id="operations"> <!--section/conteudo-->
-            <div id="previus-operation">123</div>
-            <div id="current-operation">3241</div>
+            <div id="previus-operation"></div>
+            <div id="current-operation"></div>
         </div>
         <div id="buttons-container">
             <button>CE</button>
